# x-buttonmousecontrol

./: .gitignore  Cargo.toml  Dockerfile  README.md  sonar-project.properties
.github/workflows/: ci.yml
config/: bindings.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config-toml/: Cargo.toml
crates/config-toml/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: domain.rs  error.rs  lib.rs  ports.rs  service.rs
crates/platform-rdev/: Cargo.toml
crates/platform-rdev/src/: emitter.rs  lib.rs  source.rs
crates/platform-wayland-portal/: Cargo.toml
crates/platform-wayland-portal/src/: lib.rs
crates/platform-win-hook/: Cargo.toml
crates/platform-win-hook/src/: emitter.rs  lib.rs  source.rs
crates/platform-x11-grab/: Cargo.toml
crates/platform-x11-grab/src/: emitter.rs  lib.rs  source.rs  synthetic.rs
