[package]
name = "xbuttonmousecontrol-platform-wayland-portal"
version = "0.1.0"
edition = "2021"

[dependencies]
xbuttonmousecontrol-core = { path = "../core" }
ashpd = { version = "0.13.10", default-features = false, features = ["tokio", "global_shortcuts", "remote_desktop", "screencast"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
futures-util = "0.3"