[package]
name = "xbuttonmousecontrol-platform-win-hook"
version = "0.1.0"
edition = "2021"

[dependencies]
xbuttonmousecontrol-core = { path = "../core" }
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
once_cell = "1"
